--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             <span class="mr-2">Hey friends, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">GRACE SOYEBI</span>
-                                    <span class="animated-item">BACKEND DEVELOPER</span>
-                                    <span class="animated-item">TECHNICAL WRITER</span>
+                                    <span class="animated-item">A BACKEND DEVELOPER</span>
+                                    <span class="animated-item">A TECHNICAL WRITER</span>
                                    
                                    
                                 </div>
