--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                        <a href="#resume" class="nav-link"><span data-hover="Experience/Education">Resume</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link"><span data-hover="Contact me">Contact</span></a>
@@ -117,19 +117,19 @@
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image01.png" class="img-fluid" alt="project image">
+                            <img src="images/project/project_image1.PNG" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image02.png" class="img-fluid" alt="project image">
+                            <img src="images/project/project_image2.PNG" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image03.png" class="img-fluid" alt="project image">
+                            <img src="images/project/project_image3.PNG" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
@@ -217,7 +217,7 @@
                           </div>
                           <div class="timeline-info">
                               <h3><span>Freelancer</span></h3>
-                              <p>I work from home, contributed to different open-source projects and I also work on my self-development.</p>
+                              <p>I work from home, contribute to different open-source projects and I also work on my self-development.</p>
                           </div>
                       </div>
                         
@@ -274,7 +274,7 @@
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12088.558402180099!2d-73.99373482142036!3d40.75895421922642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855b8fb3083%3A0xa0f9aef176042a5c!2sTheater+District%2C+New+York%2C+NY%2C+USA!5e0!3m2!1sen!2smm!4v1549875377188" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253209.469590248!2d3.764092046750889!3d7.42113339389438!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10398d77eeff086f%3A0x3b33e0f76e8e04a9!2sIbadan!5e0!3m2!1sen!2sng!4v1635445316020!5m2!1sen!2sng" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
@@ -307,7 +307,7 @@
                   </div>
 
                   <div class="col-12">
-                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Message"></textarea>
+                    <textarea name="message" rows="6" class="form-control" id="message" placeholder="Type message here..."></textarea>
                   </div>
 
                   <div class="ml-lg-auto col-lg-5 col-12">
