--- a/index.html
+++ b/index.html
@@ -225,7 +225,38 @@
                       <p>I attend several virtual meetings to learn and grow. View my profile <a href="https://www.meetup.com/microsoft-student-ambassadors-nigeria/members/343509009/">here.</a></p>
                   </div>
               </div>
+                <br>    
+              
+              <div class="col-lg-6 col-12">
+                <h2 class="mb-4 mobile-mt-2">Skills</h2>
+
+                <div class="timeline-wrapper">
+                  <div class="timeline-yr">
+                      <span>1.</span>
+                  </div>
+                  <div class="timeline-info">
+                      <h3><span>Python</h3>
+                  </div>
+              </div>
+
+              <div class="timeline-wrapper">
+                <div class="timeline-yr">
+                    <span>2.</span>
+                </div>
+                <div class="timeline-info">
+                    <h3><span>Django</span></h3>
                    
+                </div>
+            </div>
+
+            <div class="timeline-wrapper">
+              <div class="timeline-yr">
+                  <span>3.</span>
+              </div>
+              <div class="timeline-info">
+                  <h3><span>Git/GitHub</h3>
+              </div>
+          </div>
 
                     </div>
                 </div>
