--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
                     <div class="col-lg-12 col-12">                                
                    
-                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.linkedin.com/in/grace-omowunmi-soyebi-14572a1b2/">Grace</a></p>
+                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.linkedin.com/in/gracesoyebi/">GraceOS.</a></p>
                     </div>
                     
                </div>
