update twitter link

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                   </a>
                 
-                  <a class="social-icon" data-tooltip="Twitter" href="https://twitter.com/graceyomowunmi?s=09">
+                  <a class="social-icon" data-tooltip="Twitter" href="https://twitter.com/_graceos">
                     <i class="fa fa-twitter" aria-hidden="true"></i>
                   </a>
               
