--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         contribution to the success of your company and to my career growth. </p>
                         
                         <div class="custom-btn-group mt-4">
-                          <a href="Grace Soyebi Resume.pdf" class="btn mr-lg-2 custom-btn" target="_blank"><i class='uil uil-file-alt'></i> View Resume</a>
+                          <a href="/Grace Soyebi Resume...pdf" class="btn mr-lg-2 custom-btn" target="_blank"><i class='uil uil-file-alt'></i> View Resume</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Hire me!</a>
                         </div>
                     </div>
