--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
                   <h3 class="mb-3 text-white">Hire me!</h3>
-                  <p class="footer-text mb-0">+234 810 718 7623</p>
+                  <p class="footer-text mb-0">+1902-314-9031</p>
                   <p><a href="mailto:gracesoyebi2101@gmail.com">gracesoyebi2101@gmail.com</a></p>
                 </div>
 
