--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           
           <div class="col-lg-5 mr-lg-5 col-12">
             <div class="google-map w-100">
-              <iframe src="https://goo.gl/maps/U6vjDfvoDa7YDeUk9" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d352903.67605826526!2d-63.6423671191225!3d46.288782786680414!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b5e52ddd47f83c5%3A0x5a5777b89f519b27!2sCharlottetown%2C%20PE!5e0!3m2!1sen!2sca!4v1673695208777!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
